--- a/opentripplanner-api-webapp/pom.xml
+++ b/opentripplanner-api-webapp/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>jersey-client</artifactId>
             <scope>test</scope>
         </dependency>
+	    <dependency>
+	      <groupId>com.google.code.gson</groupId>
+	      <artifactId>gson</artifactId>
+	      <version>2.2.2</version>
+	    </dependency>
         <dependency>
             <groupId>com.sun.jersey.contribs</groupId>
             <artifactId>jersey-spring</artifactId>
